--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h2>is your b'day a palindrome?</h2>
-    <input id="birthday-input"/>
+    <input id="birthday-input" type="date"/>
     <button id="check-button">check</button>
     <p id="output"></p>
 </body><script src="/index.js"></script>
