style: style.css added

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/styles.css" rel="stylesheet">
     <title>is your birthday palindrome</title>
 </head>
 <body>
-    <h2>is your b'day a palindrome?</h2>
-    <input id="birthday-input" type="date"/>
-    <button id="check-button">check</button>
-    <p id="output"></p>
+    <div class="container">
+        <h2 class="heading">Is your birthday a palindrome ?</h2>
+        <input id="birthday-input" type="date"/>
+        <button id="check-button">check</button>
+        <p id="output"></p>
+    </div>
+    
 </body><script src="/index.js"></script>
 </html>
